samples/_failures_safe/1761527168_26971d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_431c2c4a.c: In function ‘main’:
./samples/SAFE/__tmp_431c2c4a.c:141:5: error: expected expression at end of input
  141 |     if (word_count >
      |     ^~
./samples/SAFE/__tmp_431c2c4a.c:141:5: error: expected declaration or statement at end of input
